Arregladas un par de cosas

--- a/cv.tex
+++ b/cv.tex
@@ -41,6 +41,7 @@
 \def \LANGES {es}
 
 
+
 \newcommand{\langs}[2]
 {\ifx \LANG \LANGEN
 	#1
@@ -69,8 +70,8 @@
 
 {\bf Universidad de Buenos Aires} \hfill 
 {\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\ 
-Licenciatura en Ciencias de la Computación \\ 
-\langs{(equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill 
+Licenciatura en Ciencias de la Computación  
+\langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill 
 {\em \langs{Expected graduation: 2019}{Graduación estimada: 2019}} \\
 \langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{} 
 
@@ -88,7 +89,7 @@ Licenciatura en Ciencias de la Computación \\
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Competed on the ACM - ICPC South America/South regional contest 2016 and ended 7th (2nd on our university). 
+\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university). 
 \footnote{Our team name is El Bueno, el Ralo y el Feo, which means The Good, the Sparse and the Ugly. \\ 
 \url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
 {Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad). 
@@ -126,7 +127,7 @@ Licenciatura en Ciencias de la Computación \\
 {\langs{Teacher Assistant, Algorithms and Data Structures II}
 {Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
 
-\item \langs{Worked as a TA on a Data structures and algorithms course in my university.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos.}
+\item \langs{Worked as a TA on a data structures and algorithms course in my university.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos.}
 
 \item \langs{We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
 \end{rSubsection}
@@ -145,7 +146,7 @@ Licenciatura en Ciencias de la Computación \\
 \begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
 {\langs{June 2017}{Junio 2017}}{}{}
 
-\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run up to 16 different tasks from 2 different users in protected mode, the user could launch new tasks from the keyboard and the tasks would move through memory eating each other. \footnote{No kidding.}}
+\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode, the user could launch new tasks from the keyboard and the tasks would move through memory eating each other. \footnote{No kidding.}}
 {Como un trabajo para una materia sobre organización del computador, con dos amigos hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido, el usuario podía lanzar nuevas tareas desde el teclado y estas se movían por memoria comiendose unas a las otras.}
 \end{rSubsection}
 
@@ -180,8 +181,8 @@ Licenciatura en Ciencias de la Computación \\
 
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-\langs{Written English}{Inglés escrito}			& \langs{Fluid}{Fluido} \\
-\langs{Spoken English}{Inglés hablado}			& \langs{Fluid}{Fluido} \\
+\langs{Written English}{Inglés escrito}			& \langs{Proficient}{Fluido} \\
+\langs{Spoken English}{Inglés hablado}			& \langs{Proficient}{Fluido} \\
 \langs{Spanish}{Español}		& \langs{Native}{Nativo} \\
 \langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio} \\
 % Computer Languages & C++, C, ASM, Haskell \\
