CV enviado a medallia

--- a/cv.tex
+++ b/cv.tex
@@ -68,19 +68,19 @@
 
 \begin{rSection}{\langs{Education}{Educación}}
 
-{\bf Universidad de Buenos Aires} \hfill 
-{\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\ 
-Licenciatura en Ciencias de la Computación  
-\langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill 
+{\bf Universidad de Buenos Aires} \hfill
+{\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\
+Licenciatura en Ciencias de la Computación
+\langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
 {\em \langs{Expected graduation: 2019}{Graduación estimada: 2019}} \\
-\langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{} 
+\langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 \begin{rSubsection}{Argentina Training Camp}
 {\langs{July 2016}{Julio 2016}}{}{}
 
 \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures.}
-{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva.} 
+{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva.}
 \footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
 \end{rSubsection}
 
@@ -89,16 +89,16 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university). 
-\footnote{Our team name is El Bueno, el Ralo y el Feo, which means The Good, the Sparse and the Ugly. \\ 
+\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university).
+\footnote{Our team name is El Bueno, el Ralo y el Feo, which means The Good, the Sparse and the Ugly. \\
 \url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
-{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad). 
-\footnote{Nuestro equipo se llamó {\em El Bueno, el Ralo y el Feo} \\ 
+{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad).
+\footnote{Nuestro equipo se llamó {\em El Bueno, el Ralo y el Feo} \\
 \url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
 
-\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and much more. 
+\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
 \footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
-{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y mucho más.
+{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
 \footnote{\url{https://sites.google.com/site/labandalambda/} }}
 
 \end{rSubsection}
@@ -117,7 +117,7 @@ Licenciatura en Ciencias de la Computación
 {\langs{Teacher Assistant, Haskell course}
 {Ayudante de segunda, introducción a Haskell}}
 {}
-\item \langs
+ \langs
 {Currently working as a TA on an introductory course on Haskell and functional programming.}
 {Actualmente trabajando como ayudante en un curso introductorio sobre Haskell y programación funcional.}
 \end{rSubsection}
@@ -126,10 +126,7 @@ Licenciatura en Ciencias de la Computación
 {\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
 {\langs{Teacher Assistant, Algorithms and Data Structures II}
 {Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
-
-\item \langs{Worked as a TA on a data structures and algorithms course in my university.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos.}
-
-\item \langs{We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
+\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
 \end{rSubsection}
 
 \end{rSection}
@@ -165,7 +162,7 @@ Licenciatura en Ciencias de la Computación
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
 \langs{Intermediate}{Intermedio}		& Haskell, Assembler \\
-\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Python, OCaml \\
+\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Python, OCaml 
 % Computer Languages & C++, C, ASM, Haskell \\
 % Tools & Git, \LaTeX
 \end{tabular}
@@ -184,7 +181,7 @@ Licenciatura en Ciencias de la Computación
 \langs{Written English}{Inglés escrito}			& \langs{Proficient}{Fluido} \\
 \langs{Spoken English}{Inglés hablado}			& \langs{Proficient}{Fluido} \\
 \langs{Spanish}{Español}		& \langs{Native}{Nativo} \\
-\langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio} \\
+\langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio}
 % Computer Languages & C++, C, ASM, Haskell \\
 % Tools & Git, \LaTeX
 \end{tabular}
