Started cover letter. Added Coq

--- a/cv.tex
+++ b/cv.tex
@@ -162,9 +162,8 @@ Licenciatura en Ciencias de la Computación
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
 \langs{Intermediate}{Intermedio}		& Haskell, Assembler \\
-\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Python, OCaml 
-% Computer Languages & C++, C, ASM, Haskell \\
-% Tools & Git, \LaTeX
+\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Python, OCaml, Coq 
+
 \end{tabular}
 
 \end{rSection}
@@ -182,8 +181,7 @@ Licenciatura en Ciencias de la Computación
 \langs{Spoken English}{Inglés hablado}			& \langs{Proficient}{Fluido} \\
 \langs{Spanish}{Español}		& \langs{Native}{Nativo} \\
 \langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio}
-% Computer Languages & C++, C, ASM, Haskell \\
-% Tools & Git, \LaTeX
+
 \end{tabular}
 
 \end{rSection}
