--- a/coverLetters/cover.tex
+++ b/coverLetters/cover.tex
@@ -56,22 +56,19 @@
 % Datos del destinatario
 \recipient{Galois Inc.}{}
 \date{\today}
-\opening{}
-\closing{Hope to hear from you,}
+\opening{To whom it may concern,}
+\closing{Hope to hear from you soon,}
 %\enclosure[Anexos]{Título de los anexos}          % opcional, remover o comentar si no incluye anexos 
 \makelettertitle
 
-Dear someone, around a year ago I started searching if there were any companies doing formally specified and validated software and I stumbled into Galois, it only took me a few minutes after I started reading your projects before I realized that that was the kind of stuff I'd like to get my hands into. Of course, I inmediatly clicked the Carreers tab and got thrilled to see you had internship programs, and I thought to myself, next year I'm going to apply, so here I go.
+%85
+around a year ago I started searching if there were any companies doing formally specified and validated software and I stumbled into Galois, it only took me a few minutes after I started reading your projects before I realized that that was the kind of stuff I'd like to get my hands into. Of course, I inmediatly clicked the Carreers tab and got thrilled to see you had internship programs, and I thought to myself, next year I'm going to apply, so here I go.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+%
+I believe I could become an asset for this company, as shown in my CV, I have a full on Software Engineer background, algorithms, data structures and complexity are part of my day to day worries and in the last two years I have studied them. But what really moves me, the things I love to study just for the sake of it, is the formal background you can find in all this, the idea of having an implementation that's been prooved correctly, not being able to draw a clear line between programs and theorems, it's crazy.
 
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
 
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
 
-Albert Einstein discovered that $e=mc^2$ in 1905.
-
-\[ e=\lim_{n \to \infty} \left(1+\frac{1}{n}\right)^n \]
 
 \makeletterclosing
 
