--- a/coverLetters/cover.tex
+++ b/coverLetters/cover.tex
@@ -67,6 +67,10 @@ around a year ago I started searching if there were any companies doing formally
 %
 I believe I could become an asset for this company, as shown in my CV, I have a full on Software Engineer background, algorithms, data structures and complexity are part of my day to day worries and in the last two years I have studied them. But what really moves me, the things I love to study just for the sake of it, is the formal background you can find in all this, the idea of having an implementation that's been prooved correctly, not being able to draw a clear line between programs and theorems, it's crazy.
 
+Also, I have some prior Haskell experience and expect to gain much more this semester, as stated in my CV I'll be working as a Teacher Assistant in a Haskell course. While regarding Git, I've been using it for both personal and university related projects for the last 2 years.
+
+I could move to any of your offices beginning January 1$^{st}$, or even sooner, I would however need to apply for a Working Visa, in particular a J-1 Visa, I understand this is not difficult to get once I have a job offer. Also, I have a polish citizenship and have had a US Visa before, so background checking shuldn't be a problem.
+
 
 
 
