--- a/cv.tex
+++ b/cv.tex
@@ -74,7 +74,7 @@
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
 {\em \langs{Expected graduation: 2019}{Graduación estimada: 2019}} \\
-\langs{Current GPA}{Promedio Actual}: 9.71 \langs{\hfill{\em On a 10 point scale}}{}
+\langs{Current GPA}{Promedio Actual}: 9.5 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 \begin{rSubsection}{Argentina Training Camp}
@@ -90,12 +90,17 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
-\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university).
+\item \langs{Competed on the ACM - ICPC 2017 South America/South regional contest and ended 15$^{th}$ (3$^{rd}$ on our university).
 \footnote{Our team name is El Bueno, el Ralo y el Feo, which means The Good, the Sparse and the Ugly. \\
-\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
-{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad).
+\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2017/standings} }}
+{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2017 y finalizó en la $15^{a}$ posición ($3^{o}$ dentro de la universidad).
 \footnote{Nuestro equipo se llamó {\em El Bueno, el Ralo y el Feo} \\
-\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
+\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2017/standings} }}
+
+\item \langs{Competed on the ACM - ICPC 2016 South America/South regional contest and ended 7$^{th}$ (2$^{nd}$ on our university).
+\footnote{\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
+{Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad).
+\footnote{\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
 
 \item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
 \footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
@@ -114,7 +119,7 @@ Licenciatura en Ciencias de la Computación
 
 
 \begin{rSubsection}{Universidad de Buenos Aires}
-{\langs{August 2017 - Present}{Agosto 2017 - Presente}}
+{\langs{August 2017 - December 2017}{Agosto 2017 - Diciembre 2017}}
 {\langs{Teacher Assistant, Haskell course}
 {Ayudante de segunda, introducción a Haskell}}
 {}
@@ -144,7 +149,7 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
 {\langs{June 2017}{Junio 2017}}{}{}
 
-\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode, the user could launch new tasks from the keyboard and the tasks would move through memory eating each other. \footnote{No kidding.}}
+\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode, the user could launch new tasks from the keyboard and the tasks would move through memory eating each other.}
 {Como un trabajo para una materia sobre organización del computador, con dos amigos hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido, el usuario podía lanzar nuevas tareas desde el teclado y estas se movían por memoria comiendose unas a las otras.}
 \end{rSubsection}
 
