--- a/coverLetters/cover.tex
+++ b/coverLetters/cover.tex
@@ -30,7 +30,7 @@
 \name{Teodoro}{Freund}
 \title{}                               % opcional, remover o comentar si no quiere que aparezca su título personal
 \address{Washington 2329}{}{Buenos Aires, Argentina}% opcional, remover o comentar si no quiere que aparezca sus datos de ubicación; el código postal y país son argumentos que puede omitirse o pasarse vacíos
-\phone[mobile]{+5491157378267}                         % opcional, remover o comentar si no quiere incluir su número de móvil
+\phone[mobile]{+1 (408) 593 8097}                         % opcional, remover o comentar si no quiere incluir su número de móvil
 %\phone[fixed]{3115483925}                          % opcional, remover o comentar si no quiere incluir su número de teléfono fijo
 %\phone[fax]{+3~(456)~789~012}                      % opcional, remover o comentar si no quiere incluir su número de fax
 \email{tfreund95@gmail.com}                               % opcional, remover o comentar si no quiere incluir su dirección de email
@@ -54,7 +54,7 @@
 \begin{document}
 %-----       carta       ---------------------------------------------------------
 % Datos del destinatario
-\recipient{Galois Inc.}{}
+\recipient{Galois}{}
 \date{\today}
 \opening{To whom it may concern,}
 \closing{Hope to hear from you soon,}
@@ -62,16 +62,14 @@
 \makelettertitle
 
 %85
-around a year ago I started searching if there were any companies doing formally specified and validated software and I stumbled into Galois, it only took me a few minutes after I started reading your projects before I realized that that was the kind of stuff I'd like to get my hands into. Of course, I inmediatly clicked the Carreers tab and got thrilled to see you had internship programs, and I thought to myself, next year I'm going to apply, so here I go.
 
-%
-I believe I could become an asset for this company, as shown in my CV, I have a full on Software Engineer background, algorithms, data structures and complexity are part of my day to day worries and in the last two years I have studied them. But what really moves me, the things I love to study just for the sake of it, is the formal background you can find in all this, the idea of having an implementation that's been prooved correctly, not being able to draw a clear line between programs and theorems, it's crazy.
+I believe I could become an asset for this company, as shown in my CV, I have a full Software Engineer background, algorithms, data structures and complexity are part of my day to day worries and in the last two years I have studied them. But what really moves me, the things I love to study just for the sake of it, is the formal background you can find in all this, the idea of having an implementation that's been prooved correctly, not being able to draw a clear line between programs and theorems, it's crazy.
 
-Also, I have some prior Haskell experience and expect to gain much more this semester, as stated in my CV I'll be working as a Teacher Assistant in a Haskell course. While regarding Git, I've been using it for both personal and university related projects for the last 2 years.
+Also, I have some prior Haskell experience have gained a lot working as a Teacher Assistant in a Haskell course. While regarding Git, I've been using it for both personal and university related projects for the last couple of years.
 
-I could move to any of your offices beginning January 1$^{st}$, or even sooner, I would however need to apply for a Working Visa, in particular a J-1 Visa, I understand this is not difficult to get once I have a job offer. Also, I have a polish citizenship and have had a US Visa before, so background checking shuldn't be a problem.
+What I'd expect from an internship at Galois is to learn a lot in an environment where formal CS functions very closely to implementations and real world problems. I don't think there are a lot of places out there where that combination is so clear.
 
-
+To work in the US, I'd need a J1 (or similar) Visa, I've gotten one in the past (to work at Google) and didn't have any problems with it.
 
 
 \makeletterclosing
