--- a/cv.tex
+++ b/cv.tex
@@ -73,25 +73,30 @@
 {\langs{August 2015 - Present}{Agosto 2015 - Presente}} \\
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
-{\em \langs{Expected graduation: 2019}{Graduación estimada: 2019}} \\
-\langs{Current GPA}{Promedio Actual}: 9.5 \langs{\hfill{\em On a 10 point scale}}{}
+{\em \langs{Expected graduation: 2020}{Graduación estimada: 2020}} \\
+\langs{Current GPA}{Promedio Actual}: 9.6 \langs{\hfill{\em On a 10 point scale}}{}
 
 
-\begin{rSubsection}{Argentina Training Camp}
-{\langs{July 2016}{Julio 2016}}{}{}
-
-\langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures.}
-{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva.}
-\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
-\end{rSubsection}
+%\begin{rSubsection}{Argentina Training Camp}
+%{\langs{July 2016}{Julio 2016}}{}{}
+%
+%\langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures.}
+%{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva.}
+%\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
+%\end{rSubsection}
 
 
 
 \begin{rSubsection}
 {\langs{Academic achievements and activities}{Actividades y logros académicos}}{}{}{}
 
+\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
+\footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
+{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
+\footnote{\url{https://sites.google.com/site/labandalambda/} }}
+
 \item \langs{Competed on the ACM - ICPC 2017 South America/South regional contest and ended 15$^{th}$ (3$^{rd}$ on our university).
-\footnote{Our team name is El Bueno, el Ralo y el Feo, which means The Good, the Sparse and the Ugly. \\
+\footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
 \url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2017/standings} }}
 {Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2017 y finalizó en la $15^{a}$ posición ($3^{o}$ dentro de la universidad).
 \footnote{Nuestro equipo se llamó {\em El Bueno, el Ralo y el Feo} \\
@@ -102,10 +107,9 @@ Licenciatura en Ciencias de la Computación
 {Compitió en la regional de Sudamérica/Sur de la competencia ACM - ICPC 2016 y finalizó en la $7^{ma}$ posición ($2^{do}$ dentro de la universidad).
 \footnote{\url{https://icpc.baylor.edu/regionals/finder/southamerica-south-2016/standings} }}
 
-\item \langs{Active participation since March 2016 on a reading group about $\lambda$-calculus, rewriting, type theory and other subjects.
-\footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
-{Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
-\footnote{\url{https://sites.google.com/site/labandalambda/} }}
+\item \langs{Attended a 2 week intensive camp on programming challenges algorithms and data structures during July 2016.}
+{Asistió un curso intensivo de 2 semanas sobre algoritmos y estructuras de datos en programación competitiva durante Julio del 2016.}
+\footnote{ \langs{\url{https://sites.google.com/site/trainingcampargentina2016/english}}{\url{https://sites.google.com/site/trainingcampargentina2016}} }
 
 \end{rSubsection}
 
@@ -117,22 +121,30 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSection}{\langs{Experience}{Experiencia}}
 
+\begin{rSubsection}{Google}
+{\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
+{\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
+{}
+\item[] \langs{Currently doing a Software Engineering Internship at Google for the Summer 2018.}
+{Actualmente haciendo una pasantía en Google como ingeniero de software, durante el invierno de 2018.}
+\end{rSubsection}
+
 
 \begin{rSubsection}{Universidad de Buenos Aires}
 {\langs{August 2017 - December 2017}{Agosto 2017 - Diciembre 2017}}
 {\langs{Teacher Assistant, Haskell course}
 {Ayudante de segunda, introducción a Haskell}}
 {}
- \langs
-{Currently working as a TA on an introductory course on Haskell and functional programming.}
-{Actualmente trabajando como ayudante en un curso introductorio sobre Haskell y programación funcional.}
+\item[] \langs
+{Worked as a TA on an introductory course on Haskell and functional programming.}
+{Trabajó como ayudante en un curso introductorio sobre Haskell y programación funcional.}
 \end{rSubsection}
 
 \begin{rSubsection}{Universidad de Buenos Aires}
 {\langs{March 2017 - July 2017}{Marzo 2017 - Julio 2017}}
 {\langs{Teacher Assistant, Algorithms and Data Structures II}
 {Ayudante de segunda, Algoritmos y Estructuras de Datos II}}{}
-\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness. The students had to implement a map over a red-black tree, with an STL similar interface, and as a TA I had, not only to correct their work, but also guide them into writing readable and efficient code.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software. Los alumnos tuvieron que implementar un diccionario sobre un red-black tree, con una interfaz similar a la de la STL, y como ayudante tuve que, además de corregir el trabajo, guiarlos para que hagan código eficiente y legible.}
+\item[] \langs{Worked as a TA on a data structures and algorithms course in my university. We teach an introduction on algorithms and data structures and a refinement on formal software specification and correctness.}{Trabajó como ayudante en una materia sobre algoritmos y estructuras de datos. Se enseña una introducción a distintos algoritmos y estructuras de datos y un refinamiento sobre correctitud y especificación formal de software.}
 \end{rSubsection}
 
 \end{rSection}
@@ -149,8 +161,8 @@ Licenciatura en Ciencias de la Computación
 \begin{rSubsection}{\langs{Small 32bit OS}{Pequeño SO de 32bits}}
 {\langs{June 2017}{Junio 2017}}{}{}
 
-\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode, the user could launch new tasks from the keyboard and the tasks would move through memory eating each other.}
-{Como un trabajo para una materia sobre organización del computador, con dos amigos hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido, el usuario podía lanzar nuevas tareas desde el teclado y estas se movían por memoria comiendose unas a las otras.}
+\langs{As an assignment for a subject on computer organization, two other friends and myself made a small OS that could run concurrently up to 16 different tasks from 2 different users in protected mode.}
+{Cómo un trabajo para una materia sobre organización del computador, con dos compañeros hicimos un pequeño SO capaz de ejecutar hasta 16 tareas concurrentemente de 2 usuarios distintos en modo protegido.}
 \end{rSubsection}
 
 \end{rSection}
@@ -167,8 +179,8 @@ Licenciatura en Ciencias de la Computación
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 \langs{Advanced}{Avanzado}			& C++, C \\
-\langs{Intermediate}{Intermedio}		& Haskell, Assembler \\
-\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Python, OCaml, Coq 
+\langs{Intermediate}{Intermedio}		& Haskell, Assembler, Python \\
+\langs{Basic}{Básico}				& \LaTeX, Git, Linux, Coq, PVS 
 
 \end{tabular}
 
@@ -181,14 +193,17 @@ Licenciatura en Ciencias de la Computación
 
 \begin{rSection}{\langs{Languages}{Idiomas}}
 
-
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-\langs{Written English}{Inglés escrito}			& \langs{Proficient}{Fluido} \\
+\begin{center}
+\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} r || @{\hspace{1ex}} >{\bfseries}l @{\hspace{6ex}} r }
+\langs{Written English}{Inglés escrito}			& \langs{Proficient}{Fluido} &
 \langs{Spoken English}{Inglés hablado}			& \langs{Proficient}{Fluido} \\
-\langs{Spanish}{Español}		& \langs{Native}{Nativo} \\
-\langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio}
+\langs{Spanish}{Español}		& \langs{Native}{Nativo} & 
+\langs{Italian}{Italiano}				& \langs{Intermediate}{Intermedio} \\
+\langs{French}{Francés} & \langs{Basic}{Básico} &
+\langs{German}{Alemán} & \langs{Basic}{Básico}
 
 \end{tabular}
+\end{center}
 
 \end{rSection}
 
