--- a/cv.tex
+++ b/cv.tex
@@ -23,14 +23,14 @@
 
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage[left=0.6in,top=0.6in,right=0.6in,bottom=0.6in]{geometry} % Document margins
 
 \usepackage[utf8]{inputenc} % Tildes
 
 \usepackage{hyperref} % URLs
 
 \name{Teodoro Freund} % Your name
-\address{Washington 2329, Buenos Aires, Argentina} % Your address
+%\address{Washington 2329, Buenos Aires, Argentina} % Your address
 \address{tfreund95@gmail.com \\ github.com/teofr}
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
 %\address{(000)~$\cdot$~111~$\cdot$~1111 \\ john@smith.com} % Your phone number and email
@@ -74,7 +74,7 @@
 Licenciatura en Ciencias de la Computación
 \langs{\\ (equivalent to B.Sc. + M.Sc. in Computer Science)}{} \hfill
 {\em \langs{Expected graduation: 2020}{Graduación estimada: 2020}} \\
-\langs{Current GPA}{Promedio Actual}: 9.6 \langs{\hfill{\em On a 10 point scale}}{}
+\langs{Current GPA}{Promedio Actual}: 9.64 \langs{\hfill{\em On a 10 point scale}}{}
 
 
 %\begin{rSubsection}{Argentina Training Camp}
@@ -94,6 +94,9 @@ Licenciatura en Ciencias de la Computación
 \footnote{A translation can be made upon request.  \url{https://sites.google.com/site/labandalambda/} }}
 {Pariticipación activa desde Marzo del 2016 en un grupo de lectura sobre cálculo-$\lambda$, reescritura, teoría de tipos y otros temas.
 \footnote{\url{https://sites.google.com/site/labandalambda/} }}
+
+\item \langs{Attended a week long course on Haskell/GHC type system and it's extensions during February 2018.}{Asistió un curso intensivo sobre el sistema de tipos de Haskell/GHC y sus extensiones durante el verano de 2018.}
+\footnote{\langs{Spanish version only.}{} \url{https://cs.famaf.unc.edu.ar/~hoffmann/rio18/}}
 
 \item \langs{Competed on the ACM - ICPC 2017 South America/South regional contest and ended 15$^{th}$ (3$^{rd}$ on our university).
 \footnote{Our team name is El Bueno, el Ralo y el Feo, which translates to The Good, the Sparse and the Ugly. \\
@@ -125,8 +128,8 @@ Licenciatura en Ciencias de la Computación
 {\langs{May 2018 - July 2018}{Mayo 2018 - Julio 2018}}
 {\langs{Software Engineer Intern}{Pasante en ingenieria de software}}
 {}
-\item[] \langs{Currently doing a Software Engineering Internship at Google for the Summer 2018.}
-{Actualmente haciendo una pasantía en Google como ingeniero de software, durante el invierno de 2018.}
+\item[] \langs{Completed a Software Engineering Internship at Google for the Summer 2018. Worked on an A/B performance test for a server responsible of authorizing and optimizing reads from a database, the project lowered the noise on these tests from 20\% to 5\%.}
+{Completó una pasantía en Google como ingeniero de software, durante el invierno de 2018. Trabajó en un test de performance A/B para un servidor responsable de autorizar y optimizar lecturas a una base de datos, el proyecto disminuyó el ruido en estos tests de un 20\% a un 5\%.}
 \end{rSubsection}
 
 
